--- a/src/components/header/ThemeToggle.css
+++ b/src/components/header/ThemeToggle.css
@@ -3,24 +3,21 @@
 .theme-toggle {
   position: relative;
   display: inline-block;
-  width: 70px;
-  height: 34px;
+  width: 60px;
+  height: 28px;
 }
 
 .theme-switch {
-  opacity: 0;
-  width: 0;
-  height: 0;
+  display: none;
 }
 
 .slider {
   position: relative;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   width: 100%;
   height: 100%;
-  background-color: #ccc;
+  background-color: gray;
   border-radius: 34px;
   cursor: pointer;
   transition: background-color 0.4s;
@@ -34,33 +31,30 @@
 
 .slider-thumb {
   position: absolute;
-  width: 28px;
-  height: 28px;
+  width: 21px;
+  height: 21px;
   background-color: white;
   border-radius: 50%;
   top: 3px;
-  left: 3px;
+  left: 5px;
   transition: transform 0.4s;
 }
 
 .theme-switch:checked + .slider {
-  background-color: #4d4d4d;
+  background-color: #6b58e5;
 }
 
 .theme-switch:checked + .slider .slider-thumb {
-  transform: translateX(36px);
+  transform: translateX(31px);
 }
 
 .slider .sun-icon {
-  color: #f39c12;
-  opacity: 1;
   transition: opacity 0.4s;
 }
 
 .slider .moon-icon {
-  color: #6b58e5;
-  opacity: 0.7;
   transition: opacity 0.4s;
+  transform: scaleX(-1);
 }
 
 .theme-switch:checked + .slider .sun-icon {
