--- a/src/index.css
+++ b/src/index.css
@@ -722,13 +722,14 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 .cardholderCard {
-  box-shadow: 0 0 15px gray;
+  box-shadow: 0 0 4px gray;
   width: 100%;
-  background-color: white;
+  background-color: var(--modal-color);
   display: flex;
   justify-content: space-between;
   padding: 10px;
   border-radius: 10px;
+  color: var(--black-or-white-text-color);
 }
 
 #cardholderCardImgSection {
@@ -762,7 +763,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .cardholderCardMiniTableContainer {
   padding: 0 5px;
-  background-color: rgb(243, 240, 240);
+  background-color: var();
   border-radius: 5px;
 }
 
