--- a/src/index.css
+++ b/src/index.css
@@ -141,11 +141,12 @@ body {
   background-color: black;
   border-radius: 50%;
   margin: 5px 10px;
+  border: 10px solid var(--color-blue);
 }
 
 .headerSectionLeft img {
-  height: 3.8rem;
-  padding: 10px;
+  height: 3rem;
+  /* padding:px; */
 }
 
 #smallNavTopHeader {
@@ -536,6 +537,10 @@ div.alert-danger {
   color: var(--black-or-white-text-color);
 }
 
+.cardTextValue {
+  color: rgb(159, 156, 156);
+}
+
 .loyaltyCardTitle {
   padding: 8px 8px 8px 10px;
   font-size: 1.1rem;
@@ -763,7 +768,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .cardholderCardMiniTableContainer {
   padding: 0 5px;
-  background-color: var();
+  background-color: var(--black-opacity);
   border-radius: 5px;
 }
 
