--- a/src/index.css
+++ b/src/index.css
@@ -219,6 +219,22 @@ nav a {
   padding: 10px 20px;
 }
 
+.user-img-container {
+  position: relative;
+  display: inline-block;
+}
+
+.notification-dot {
+  position: absolute;
+  top: 1px;
+  right: 7px;
+  width: 12px;
+  height: 12px;
+  background-color: red;
+  border-radius: 50%;
+  border: 2px solid white;
+}
+
 #userDisplayName {
   height: 100%;
   margin: 0;
@@ -1017,4 +1033,28 @@ p {
 .emptyList {
   background-color: var(--empty-list-bkgrd);
   color: var(--black-or-white-text-color);
+}
+
+.notification-icon {
+  position: relative;
+  display: inline-block;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.bell-icon {
+  font-size: 1.5em;
+}
+
+.notification-badge {
+  position: absolute;
+  top: 0;
+  right: 12px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 0.7em;
+  font-weight: bold;
+  transform: translate(50%, -50%);
 }
