--- a/src/index.css
+++ b/src/index.css
@@ -269,6 +269,15 @@ nav a {
   color: gray;
 }
 
+.userMenuNotificationsBadge {
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 0.7em;
+  font-weight: bold;
+}
+
 .themeTogglePlacement {
   display: flex;
   justify-content: center;
@@ -1033,28 +1042,4 @@ p {
 .emptyList {
   background-color: var(--empty-list-bkgrd);
   color: var(--black-or-white-text-color);
-}
-
-.notification-icon {
-  position: relative;
-  display: inline-block;
-  font-size: 24px;
-  cursor: pointer;
-}
-
-.bell-icon {
-  font-size: 1.5em;
-}
-
-.notification-badge {
-  position: absolute;
-  top: 0;
-  right: 12px;
-  background-color: red;
-  color: white;
-  border-radius: 50%;
-  padding: 2px 6px;
-  font-size: 0.7em;
-  font-weight: bold;
-  transform: translate(50%, -50%);
 }
