--- a/src/index.css
+++ b/src/index.css
@@ -240,6 +240,44 @@ nav a {
   background-color: var(--modal-color);
 }
 
+@keyframes ring {
+  0% {
+    transform: rotate(0);
+  }
+  10% {
+    transform: rotate(15deg);
+  }
+  20% {
+    transform: rotate(-10deg);
+  }
+  30% {
+    transform: rotate(5deg);
+  }
+  40% {
+    transform: rotate(-5deg);
+  }
+  50% {
+    transform: rotate(3deg);
+  }
+  60% {
+    transform: rotate(-3deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+
+.bell-icon {
+  display: inline-block;
+  transition: transform 0.3s;
+  font-size: 3rem;
+  color: var(--color-blue);
+}
+
+.ringing {
+  animation: ring 0.5s ease-in-out 2; /* Adjust the duration and timing */
+}
+
 #userDisplayName {
   height: 100%;
   margin: 0;
