--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,30 +1,51 @@
 :root {
-  --color-blue: #0080ff;
+  --login-form-bkgrd: white;
+  --black-or-white-text-color: black;
+  --black-or-white-bkgrd: white;
+  --color-blue: #6b58e5;
   --color-light-blue: rgb(210, 237, 246);
-  --light-gray: #d9d7d7;
+  --login-border: #d9d7d7;
   --light-blue: rgb(210, 237, 246);
   --black-opacity: rgba(0, 0, 0, 0.09);
 }
 
-/* Login Form */
+[data-theme="dark"] {
+  --login-form-bkgrd: #212529;
+  --black-or-white-text-color: white;
+  --black-or-white-bkgrd: black;
+  --login-border: #464646;
+}
+
 #loginMain {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 3rem;
+  height: 100vh;
+}
+
+#loginMain .theme-toggle {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  margin: 0;
 }
 
 #loginForm {
-  background-color: var(--color-light-blue);
+  position: relative;
+  background-color: var(--login-form-bkgrd);
   border-radius: 10px;
   text-align: center;
-  box-shadow: 0 0 5px gray;
   width: clamp(15rem, 100vw, 25rem);
   margin: 10px;
 }
 
-#loginForm h1 {
+#loginForm > * {
+  margin: 20px 0;
+}
+
+#loginForm h2 {
   color: var(--color-blue);
+  margin-top: 0;
 }
 
 #socialLogin {
@@ -35,6 +56,11 @@
 #socialLogin button:hover {
   transform: scale(1.01);
   background: white;
+}
+
+#socialLogin p {
+  font-size: 12px;
+  color: var(--black-or-white-text-color);
 }
 
 #loginOr {
@@ -55,14 +81,16 @@
 
 .login-form-group {
   display: flex;
-  border: 1px solid var(--light-gray);
-  background-color: white;
-  padding-left: 10px;
-  border-radius: 5px;
+  border: 1px solid var(--login-border);
+  background-color: var(--black-or-white-bkgrd);
+  padding: 0 10px;
+  border-radius: 30px;
   margin-bottom: 10px;
 }
 
 .userAndPwdInput {
+  color: var(--black-or-white-text-color);
+  background-color: var(--black-or-white-bkgrd);
   border: none;
   border-radius: 5px;
   padding: 10px;
@@ -73,12 +101,12 @@
   font-size: 1.9rem;
   color: var(--color-blue);
   padding-right: 10px;
-  border-right: 1px solid var(--light-gray);
+  border-right: 1px solid var(--login-border);
 }
 
 #loginSubmit {
-  /* margin-top: 10px; */
   padding: 10px;
+  border-radius: 30px;
 }
 
 #togglePwd {
