--- a/src/index.css
+++ b/src/index.css
@@ -271,6 +271,13 @@ nav a {
   border-radius: 50%;
 }
 
+.card-details-notification-delete {
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: var(--fav-red);
+  border-radius: 50%;
+}
+
 .notificationIcon {
   font-size: 2rem;
   color: var(--fav-red);
@@ -334,6 +341,15 @@ nav a {
   100% {
     transform: rotate(0);
   }
+}
+
+.card-details-notifications-container {
+  padding: 10px 20px;
+  background-color: #e1ddf8;
+  color: gray;
+  margin-bottom: 1rem;
+  font-size: 13px;
+  border-radius: 10px;
 }
 
 .bell-icon {
