--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@
   --progress-bar-bkgrd: rgba(0, 0, 0, 0.09);
   --hover-color: #c9bffc;
   --empty-list-bkgrd: rgba(0, 0, 0, 0.09);
+  --card-details-notification-bkgrd: #f4f2ff;
 }
 
 [data-theme="dark"] {
@@ -47,6 +48,7 @@
   --progress-bar-bkgrd: rgba(255, 255, 255, 0.2);
   --hover-color: #212529;
   --empty-list-bkgrd: rgba(255, 255, 255, 0.13);
+  --card-details-notification-bkgrd: #1f1e1e;
 }
 
 body {
@@ -271,11 +273,17 @@ nav a {
   border-radius: 50%;
 }
 
+.card-details-notification-icon-container {
+  width: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .card-details-notification-delete {
   cursor: pointer;
   font-size: 1.5rem;
   color: var(--fav-red);
-  border-radius: 50%;
 }
 
 .notificationIcon {
@@ -345,7 +353,7 @@ nav a {
 
 .card-details-notifications-container {
   padding: 10px 20px;
-  background-color: #e1ddf8;
+  background-color: var(--card-details-notification-bkgrd);
   color: gray;
   margin-bottom: 1rem;
   font-size: 13px;
