--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,49 @@ body {
   flex: 1;
 }
 
+.reward-tags-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 10px;
+}
+
+.tag-input-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.tag-input-field {
+  flex: 1;
+  padding: 8px 40px 8px 15px;
+  border-radius: 20px;
+  border: 1px solid #ccc;
+}
+
+.tag-input-add-button {
+  position: absolute;
+  right: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  color: var(--color-blue);
+  margin-right: 5px;
+}
+
+.tag-remove-button {
+  font-size: 18px;
+  cursor: pointer;
+  color: var(--fav-red);
+}
+
+.tag-span {
+  border-radius: 20px;
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
 .cardDetailsHeaderContainer {
   display: flex;
   justify-content: space-between;
