--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,13 @@ body {
   flex: 1;
 }
 
+.reward-tags-main-container {
+  padding: 20px;
+  box-shadow: var(--box-shadow);
+  border-radius: 5px;
+  background: var(--modal-color);
+}
+
 .reward-tags-container {
   display: flex;
   flex-wrap: wrap;
@@ -139,7 +146,7 @@ body {
 
 .tag-span {
   border-radius: 20px;
-  padding: 8px;
+  padding: 8px 8px 8px 10px;
   display: flex;
   align-items: center;
   gap: 5px;
