card status css done

--- a/src/index.css
+++ b/src/index.css
@@ -1258,3 +1258,15 @@ p {
   background-color: var(--empty-list-bkgrd);
   color: var(--black-or-white-text-color);
 }
+
+.stamp {
+  display: inline-block;
+  font-size: 12px;
+  color: #ff0000;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 7px;
+  border: 2px dashed #ff0000;
+  letter-spacing: 2px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
