card table new filters done

--- a/src/index.css
+++ b/src/index.css
@@ -1270,3 +1270,73 @@ p {
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
 }
+
+/* Filter Stuff below */
+
+.filtersContainer {
+  display: flex;
+  background-color: var(--light-blue);
+  padding: 5px;
+  border-radius: 5px;
+  align-items: center;
+  flex-wrap: wrap;
+  font-size: 15px;
+  margin-bottom: 15px;
+}
+
+.filtersContainer * {
+  margin: 5px;
+}
+
+.statusFilters {
+  height: 2rem;
+  color: rgba(0, 0, 0, 0.7);
+  background-color: white;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  padding: 0 5px;
+}
+
+.filtersContainer button {
+  margin-left: auto;
+}
+
+.radioFilters {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.form-check-input:checked {
+  background-color: var(--color-blue);
+  border-color: var(--color-blue);
+}
+
+.inputFilters {
+  padding-left: 10px;
+  border: none;
+  height: 2rem;
+  border-radius: 5px;
+  /* min-width: 15rem; */
+}
+
+.filterButton {
+  padding-left: 10px;
+  color: white;
+  background-color: var(--color-blue);
+  border: 2px solid var(--light-gray);
+  float: right;
+  height: 2.67rem;
+  border-radius: 10px 10px 10px 0;
+}
+
+.filterButtonSmallScreen {
+  padding-left: 10px;
+  color: white;
+  background-color: var(--epic-red);
+  border: none;
+  flex: 1;
+  border-radius: 0 10px 10px 0;
+  padding-left: 10px;
+}
