--- a/src/index.css
+++ b/src/index.css
@@ -1231,6 +1231,20 @@ p {
   display: var(--bonus-ribbon-effect);
 }
 
+.cardDetailsMobileImgContainer {
+  display: flex;
+  justify-content: center;
+  border-radius: 5px 5px 0 0;
+  min-height: 5rem;
+  background-color: var(--light-blue);
+}
+
+.cardDetailsMobileImg {
+  width: 10rem;
+  padding: 10px;
+  object-fit: contain;
+}
+
 #referralLink {
   font-size: 2.3rem;
   margin-right: 10px;
