--- a/src/index.css
+++ b/src/index.css
@@ -1261,6 +1261,14 @@ p {
   object-fit: contain;
 }
 
+.referrerField {
+  border-radius: 0 30px 30px 0;
+  padding: 5px 3px;
+  display: flex;
+  color: white;
+  align-items: center;
+}
+
 #referralLink {
   font-size: 2.3rem;
   margin-right: 10px;
